# mrvn-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.json
.githooks/: pre-commit
.github/workflows/: build-image.yml  check.yml  release-image.yml
mrvn-back-ytdl/: Cargo.toml
mrvn-back-ytdl/src/: async_ring_buffer.rs  brain.rs  copy_buffered.rs  decode.rs  error.rs  lib.rs  ring_buffer.rs  ring_buffer_io.rs  setup.rs  song.rs  songbird.rs  speaker.rs
mrvn-back-ytdl/src/formats/: mod.rs  mpeg_ts.rs  mpeg_ts_reader.rs  mpegts.rs
mrvn-back-ytdl/src/input/: mod.rs  remote_file.rs
mrvn-back-ytdl/src/input/hls/: media_file_stream.rs  media_segment_stream.rs  mod.rs
mrvn-back-ytdl/src/input/remote_hls_stream/: media_file_stream.rs  media_segment_stream.rs  mod.rs
mrvn-back-ytdl/src/source/: abort_on_drop.rs  decoded_pcm.rs  mod.rs  opus_passthrough.rs
mrvn-front-discord/: Cargo.toml
mrvn-front-discord/src/: cleanup_loop.rs  command_handler.rs  commands.rs  config.rs  error.rs  frontend.rs  main.rs  model_delegate.rs  playing_message.rs  queued_message.rs  queued_song.rs  voice_handler.rs
mrvn-front-discord/src/message/: action_delegate.rs  action_updater.rs  default_action_delegate.rs  message_delegate.rs  mod.rs  send_message.rs  time_bar.rs
mrvn-model/: Cargo.toml
mrvn-model/src/: app_model.rs  app_model_delegate.rs  config.rs  guild_model.rs  lib.rs
