[package]
name = "mrvn-back-ytdl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
dashmap = "5.3"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.2"
async-stream = "0.3"
m3u8-rs = "4.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "voice"]

[dependencies.songbird]
version = "0.2"
features = ["gateway", "serenity-rustls"]

[dependencies.tokio]
version = "1.19"
features = ["macros", "rt-multi-thread", "io-util"]

[dependencies.tokio-util]
version = "0.7"
features = ["io"]

[dependencies.uuid]
version = "1.1"
features = ["v4"]
