[package]
name = "mrvn-back-ytdl"
version = "1.0.0"
edition = "2024"

[dependencies]
bytes = "1.11"
dashmap = "6"
futures = "0.3"
lazy_static = "1.5"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.5"
async-stream = "0.3"
m3u8-rs = "6.0"
pin-project-lite = "0.2"
rubato = "0.16"
byte-slice-cast = "1.2"
mpeg2ts-reader = "0.18"
adts-reader = "0.4"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["rustls-no-provider", "gzip", "stream"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.songbird]
version = "0.6"
features = ["gateway", "rustls"]

[dependencies.symphonia]
version = "0.5"
features = ["isomp4", "aac", "alac", "mp3"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "io-util"]

[dependencies.tokio-util]
version = "0.7"
features = ["io", "io-util", "compat"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.mini-io-queue]
version = "0.2.0"
features = ["asyncio"]
