[package]
name = "mrvn-front-discord"
version = "1.0.0"
edition = "2021"

[dependencies]
mrvn-model = { path = "../mrvn-model" }
mrvn-back-ytdl = { path = "../mrvn-back-ytdl" }
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
uuid = "1.1"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.tokio]
version = "1.19"
features = ["macros", "rt-multi-thread"]
