[package]
name = "mrvn-model"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
dashmap = "4.0"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "voice"]

[dependencies.tokio]
version = "1.12"
features = ["macros", "rt-multi-thread"]
