[package]
name = "mrvn-model"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.tokio]
version = "1.32"
features = ["macros", "rt-multi-thread"]
