[package]
name = "mrvn-model"
version = "1.0.0"
edition = "2024"

[dependencies]
dashmap = "6"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
